--- a/internal/projects/bulleit/Interfaces/TodoViewController.xib
+++ b/internal/projects/bulleit/Interfaces/TodoViewController.xib
@@ -54,7 +54,6 @@
 								<string key="NSFrame">{{0, -234}, {320, 245}}</string>
 								<reference key="NSSuperview" ref="106440853"/>
 								<reference key="NSWindow"/>
-								<reference key="NSNextKeyView"/>
 								<string key="NSReuseIdentifierKey">_NS:366</string>
 								<int key="IBUIContentMode">1</int>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -212,7 +211,7 @@
 				<reference key="dict.values" ref="0"/>
 			</object>
 			<nil key="sourceID"/>
-			<int key="maxID">9</int>
+			<int key="maxID">15</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<object class="NSMutableArray" key="referencedPartialClassDescriptions">
@@ -228,6 +227,17 @@
 				<object class="IBPartialClassDescription">
 					<string key="className">TodoViewController</string>
 					<string key="superclassName">STReloadableTableViewController</string>
+					<object class="NSMutableDictionary" key="outlets">
+						<string key="NS.key.0">searchStampsNavigationController</string>
+						<string key="NS.object.0">UINavigationController</string>
+					</object>
+					<object class="NSMutableDictionary" key="toOneOutletInfosByName">
+						<string key="NS.key.0">searchStampsNavigationController</string>
+						<object class="IBToOneOutletInfo" key="NS.object.0">
+							<string key="name">searchStampsNavigationController</string>
+							<string key="candidateClassName">UINavigationController</string>
+						</object>
+					</object>
 					<object class="IBClassDescriptionSource" key="sourceIdentifier">
 						<string key="majorKey">IBProjectSource</string>
 						<string key="minorKey">./Classes/TodoViewController.h</string>
