--- a/sites/stamped.com/bin/alerts/templates/email_comment.html.j2
+++ b/sites/stamped.com/bin/alerts/templates/email_comment.html.j2
@@ -51,7 +51,7 @@
                                                 <table cellpadding="0" cellspacing="0">
                                                     <tr>
                                                         <td rowspan=2 width="94" height="94">
-                                                            <img src="http://static.stamped.com/users/{{ screen_name }}-92x92.jpg" width="92" height="92" border="1" alt="{{ screen_name }}" style="border-size:1px;border-style:solid;border-color:#e6e6e6">
+                                                            <img src="{{ image_url_92 }}" width="92" height="92" border="1" alt="{{ screen_name }}" style="border-size:1px;border-style:solid;border-color:#e6e6e6">
                                                         </td>
                                                         <td rowspan=2 width="20" height="92">
                                                             &nbsp;
@@ -69,27 +69,6 @@
                                             </td>
                                         </tr>
                                         
-                                        <tr>
-                                            <td width="600" height="44" align="center" valign="middle">
-                                                <img src="http://static.stamped.com/assets/img/email-line.png" width="593" height="3">
-                                            </td>
-                                        </tr>
-                                        
-                                        <tr>
-                                            <td width="600" height="72" align="center" valign="middle">
-                                                <img src="http://static.stamped.com/assets/img/email-icon.png" width="68" height="64" alt="App Icon">
-                                            </td>
-                                        </tr>
-                                        <tr>
-                                            <td width="600" height="24" align="center" valign="middle" style="color:#397de0;font-family:Helvetica,Arial;font-size:16px;font-weight:bold;margin:0;padding:0;">
-                                                Launch Stamped
-                                            </td>
-                                        </tr>
-                                        <tr>
-                                            <td width="600" height="40" align="center" valign="top" style="color:#666;font-family:Helvetica,Arial;font-size:12px;margin:0;padding:0;">
-                                                to reply to @{{ screen_name }}
-                                            </td>
-                                        </tr>
                                     </table>
                                 
                                 </td>
